Add endpoint for all results of a given analysis. Remove buggy caching solution. Improve batching for multiple index-requests
